apps/base/uptime-kuma/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Uptime Kuma
    gethomepage.dev/description: Uptime monitoring
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/icon: uptime-kuma.png
    nginx.org/ssl-redirect: "false"
    nginx.org/redirect-to-https: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - uptime-kuma.cluster.f4mily.net
      secretName: wildcard-cluster-f4mily-net-tls
  rules:
    - host: uptime-kuma.cluster.f4mily.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uptime-kuma
                port:
                  number: 3001
